# frugen

./: .woodpecker.yaml  CMakeLists.txt  Doxyfile  README.md  doxygen.cmake  example.json  fru-errno.c  fru-errno.h  fru-private.h  fru.c  fru.h  fru.h.in  fru_errno.h  frugen-json.c  frugen-json.h  frugen.c  frugen.h  smbios.h
.woodpecker/: build.yaml
buildenv/: Dockerfile  Dockerfile.fedora  README.md
lib/: fru-private.h  fru__decode.c  fru__encode_6bit.c  fru_add_custom.c  fru_add_mr.c  fru_binhex.c  fru_common.c  fru_delete_custom.c  fru_enable_area.c  fru_errno.c  fru_get_custom.c  fru_getfield.c  fru_init.c  fru_internal.c  fru_load.c  fru_mr_ops.c  fru_save.c  fru_setfield.c  fru_setfield_binary.c
